fix: correct z-index to display edit mode for archive items properly

--- a/src/scss/06_overall.scss
+++ b/src/scss/06_overall.scss
@@ -14,21 +14,6 @@ body {
   color: #fff;
 }
 
-.page-overlay {
-  background-color: rgba($color: #000, $alpha: 0.5);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  visibility: hidden;
-
-  &--visible {
-    visibility: visible;
-  }
-}
-
 .button {
   background: none;
   border: none;
