--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -14,6 +14,24 @@
     visibility: visible;
   }
 
+  &--on-top {
+    z-index: 1;
+  }
+
+  &__overlay {
+    background-color: rgba($color: #000, $alpha: 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    visibility: hidden;
+
+    &--visible {
+      visibility: visible;
+    }
+  }
+
   &__list {
     list-style: none;
     padding: 0;
